--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,37 +18,20 @@
                     <a href="" class="nav-link">Messages</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
+            <ul *ngIf="loggedIn()" class="navbar-nav ml-auto">
                 <li class="navbar-nav">
                     <a href="" class="nav-link">Username</a>
                 </li>
                 <li class="navbar-nav">
-                    <a href="" class="nav-link">Logout</a>
+                    <a (click)="logout()" class="nav-link">Logout</a>
                 </li>
             </ul>
 
-            <form #form="ngForm" class="d-flex" (ngSubmit)="login()">
+            <form *ngIf="!loggedIn()" #form="ngForm" class="d-flex" (ngSubmit)="login()">
                 <input #username="ngModel" class="form-control form-control-sm me-2" required minlength="5" type="text" name="username" placeholder="Username" [(ngModel)]="model.username">
                 <input #password="ngModel" class="form-control form-control-sm me-2" required minlength="6" type="password" name="password" placeholder="Password" [(ngModel)]="model.password">
                 <button [disabled]="form.invalid" class="btn btn-success btn-sm" type="submit">Login</button>
             </form>
         </div>
     </div>
-</div>
-
-<div style="margin-top: 120px;">
-    <p>form valid: {{ form.valid }}</p>
-    <p>form invalid: {{ form.invalid }}</p>
-    <p>form touched: {{ form.touched }}</p>
-    <p>form dirty: {{ form.dirty }}</p>
-    <br>
-    <p>username valid: {{ username.valid }}</p>
-    <p>username invalid: {{ username.invalid }}</p>
-    <p>username touched: {{ username.touched }}</p>
-    <p>username dirty: {{ username.dirty }}</p>
-    <br>
-    <p>password valid: {{ password.valid }}</p>
-    <p>password invalid: {{ password.invalid }}</p>
-    <p>password touched: {{ password.touched }}</p>
-    <p>password dirty: {{ password.dirty }}</p>
 </div>
